--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 body{
     background-image: linear-gradient(rgba(0, 0, 7,0.4),rgba(0, 0,7,0.4)), 
-    url("./IN-en-20230807-popsignuptwoweeks-perspective_alpha_website_large.jpg"); 
+    url("./netflix-.jpg"); 
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
